@@ -1,3 +1,8 @@
+2004-10-21  Stefan Jahn  <stefan@lkcc.org>
+
+	* devices/mosfet.cpp: Applied trapezoidal rule to Meyer
+	charges in MOSFET model.
+
 2004-10-17  Stefan Jahn  <stefan@lkcc.org>
 
 	* devices/device.cpp: Simplified charge computation for
